5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1637_2446.log
== TEST (2019-04-11 11:21:33) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = 





print(x)
-- ERROR:
File "XXXX", line 4
    x2 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:08) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)






print(x)
-- ERROR:
File "XXXX", line 4
    x2 = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:36) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)





print(x)
print(x2)
-- OUTPUT:
0
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:41) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10




print(x)
print(x2)
print(x3)
-- OUTPUT:
0
8
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:43) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10



print(x)
print(x2)
print(x3)
-- OUTPUT:
0
8
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:56) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10



print(x)
print(x2)
print(x3)
print(x4)
-- OUTPUT:
0
8
7
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:08) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10
x5 = (s // 10) - (s // 100)*10


print(x)
print(x2)
print(x3)
print(x4)
print(x5)
-- OUTPUT:
0
8
7
6
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:47) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10
x5 = (s // 10) - (s // 100)*10
x6 = (s % 10)

print(x)
print(x2)
print(x3)
print(x4)
print(x5)
print(x6)
-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:53) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10
x5 = (s // 10) - (s // 100)*10
x6 = (s % 10)

print(x)
print(x2)
print(x3)
print(x4)
print(x5)
print(x6)
-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:49) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10
x5 = (s // 10) - (s // 100)*10
x6 = (s % 10)

operacao = x2 + x4 + x6
op2 = x + x3 + x5
mult = operacao % op2
if(mult == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:32:55) 
-- CODE:
s = int(input("Insira sua senha: "))

x = s // 100000
x2 = (s // 10000) - (x * 10)
x3 = (s // 1000) - (s // 10000)*10
x4 = (s // 100) - (s // 1000)*10
x5 = (s // 10) - (s // 100)*10
x6 = (s % 10)

operacao = x2 + x4 + x6
op2 = x + x3 + x5
mult = operacao % op2
if(mult == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)
-- EXECUTION TIME:
0.151619
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
